add searchEvalTrecCovid.java and TrainingTestTrecCovid.java